<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/f_menu"
    android:id="@+id/abs_cl"
    tools:context=".BookSearchActivity">

    <TextView
        android:id="@+id/abs_tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_search"
        android:textColor="#3F4359"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/abs_et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="#372537"
        android:hint="Título"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abs_tv_header" />

    <EditText
        android:id="@+id/abs_et_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#372537"
        android:hint="@string/author"
        app:layout_constraintTop_toBottomOf="@id/abs_et_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/abs_et_isbn"
        android:hint="@string/isbn"
        android:textColor="#372537"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/abs_et_author"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/abs_ib_qr"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="92dp"
        android:background="#00545355"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_qr1"
        app:layout_constraintEnd_toStartOf="@id/abs_b_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abs_et_isbn" />

    <Button
        android:id="@+id/abs_b_search"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="70dp"
        android:textSize="18sp"
        android:backgroundTint="#D37DDF6A"
        android:text="@string/search"
        android:textColor="#324442"
        app:cornerRadius="30dp"
        app:layout_constraintTop_toBottomOf="@id/abs_et_isbn"
        app:layout_constraintStart_toEndOf="@id/abs_ib_qr"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/abs_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#fda085"
        android:alpha="1"
        app:itemIconTint="#202020"
        app:itemTextColor="#4E4E4E"
        app:menu="@menu/navigation_items" />

</androidx.constraintlayout.widget.ConstraintLayout>