<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b3"
    android:id="@+id/al_cl"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/al_iv_grad"
        android:layout_width="match_parent"
        android:layout_height="689dp"
        android:background="@drawable/gradient"
        app:layout_constraintBottom_toTopOf="@id/al_vblack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/al_vblack"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/al_vwhite"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="#6BFFFFFF"
        android:alpha="0.1"
        android:layout_marginTop="240dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/al_tv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:text="@string/prompt_user"
        android:layout_marginStart="20dp"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/al_et_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/prompt_user"
        android:textColorHint="#454545"
        android:textColor="#8A8A8A"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/al_tv_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/al_tv_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/prompt_password"
        android:layout_marginStart="20dp"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/al_et_user"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/al_et_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        android:hint="@string/prompt_password"
        android:textColorHint="#454545"
        android:textColor="#8A8A8A"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/al_tv_pwd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/al_b_login"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="#F44336"
        android:text="@string/action_sign_in"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/al_et_pwd"
        app:cornerRadius="30dp" />


</androidx.constraintlayout.widget.ConstraintLayout>